change z-index to avoid text overlap

--- a/styles.css
+++ b/styles.css
@@ -291,7 +291,7 @@ h2 {
       box-shadow: 0.875rem 1rem 1.25rem 0rem #370140e0, 0 0.375rem 1.25rem 0 rgb(0 0 0 / 19%);
 }
 .front-card{
-    z-index: 2;
+    z-index: -2;
 }
 .back-card-creativity{
     transform:rotateY(180deg);
